@@ -1,50 +1,29 @@
 package com.enonic.xp.extractor.impl;
 
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.function.Function;
+import java.util.stream.Collectors;
 
 import org.apache.tika.metadata.Metadata;
-import org.apache.tika.sax.BodyContentHandler;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import com.enonic.xp.extractor.ExtractedData;
 
 class ExtractorResultFactory
 {
-    private static final Logger LOG = LoggerFactory.getLogger( ExtractorResultFactory.class );
-
-    static ExtractedData create( final Metadata metadata, final BodyContentHandler handler )
+    static ExtractedData create( final Metadata metadata, final String contentText )
     {
-        String contentText = handler.toString();
-        try
-        {
-            contentText = ExtractedTextCleaner.clean( contentText );
-        }
-        catch ( Throwable t )
-        {
-            LOG.warn( "Error cleaning up extracted text", t );
-        }
-
-        return ExtractedData.create().
-            metadata( toMap( metadata ) ).
-            text( contentText ).
-            imageOrientation( metadata.get( Metadata.ORIENTATION ) ).
-            build();
+        return ExtractedData.create()
+            .metadata( toMap( metadata ) )
+            .text( ExtractedTextCleaner.clean( contentText ) )
+            .imageOrientation( metadata.get( Metadata.ORIENTATION ) )
+            .build();
     }
 
     private static Map<String, List<String>> toMap( final Metadata metadata )
     {
-        Map<String, List<String>> values = new HashMap<>();
-
-        for ( String name : metadata.names() )
-        {
-            values.put( name, new ArrayList<>( Arrays.asList( metadata.getValues( name ) ) ) );
-        }
-
-        return values;
+        return Arrays.stream( metadata.names() )
+            .collect( Collectors.toUnmodifiableMap( Function.identity(), name -> List.of( metadata.getValues( name ) ) ) );
     }
 }
